--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ Werkzeug==3.0.0
 # SQLAlchemy helps us work with databases using Python objects
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.46
+psycopg2-binary
+
 
 # File uploads and security
 # python-dotenv helps us load environment variables from .env files
@@ -29,4 +31,5 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 
 gunicorn
+
 
